# pet-platform

./: .gitignore  AGENTS.md  DESIGN.md  LOCAL_TESTING.md  PRD.md  SPEC.md  TECH.md  TEST_ACCOUNTS.md
backend/: .env.example  README.md  pyproject.toml
backend/app/: main.py
backend/app/application/auth/: dtos.py  use_cases.py  verification.py
backend/app/application/catalog/: dtos.py  use_cases.py
backend/app/application/dashboard/: dtos.py  use_cases.py
backend/app/core/: config.py  database.py  security.py
backend/app/domain/catalog/: entities.py  repositories.py
backend/app/domain/dashboard/: entities.py  repositories.py
backend/app/domain/identity/: auth_entities.py  auth_repositories.py  entities.py
backend/app/domain/shared/: enums.py
backend/app/infrastructure/persistence/mysql/: auth_repository.py  catalog_repository.py  dashboard_repository.py  models.py
backend/app/infrastructure/verification/: memory.py  sms.py
backend/app/interfaces/http/: dependencies.py  router.py
backend/app/interfaces/http/routers/: auth.py  catalog.py  dashboard.py  health.py
backend/app/tests/: test_http_contracts.py  test_web_smoke.py
backend/database/: init_mysql.sql
docs/: API_OVERVIEW.md  ARCHITECTURE.md  ENTERPRISE_ARCHITECTURE.md  SERVICE_TECH_UPGRADES.md
scripts/: generate_web_assets.ps1  init_mysql.ps1  smoke_test.ps1  stop_local.ps1
web/: app.js  index.html  styles.css
